[project]
name = "concert-exporter"
version = "0.1.0"
description = "Export data from concert files"
authors = [
    {name = "Morph Tollon",email = "89318965+Morph-Tollon@users.noreply.github.com"}
]
license = {text = "GPL-3.0 license"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
